paragraph deleted and h5 element added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Hello Everyone</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda praesentium doloremque quas recusandae placeat, et fugit nesciunt cum, veritatis animi sunt! Impedit numquam fuga culpa itaque est incidunt quae aut?</p>
+    <h5>I changed the paragraph</h5>
 </body>
 </html>
